@@ -1,3 +1,7 @@
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m
+android.enableR8=true
 buildscript {
     ext.kotlin_version = '1.9.22'
     repositories {
